--- a/.github/workflows/distribution.yml
+++ b/.github/workflows/distribution.yml
@@ -1,6 +1,13 @@
 name: Update Split Weights
 
+# branch main only
 on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
   schedule:
     - cron: "0 19 * * 0"
 
