add: enable manual triggering for distribution workflow

--- a/.github/workflows/distribution.yml
+++ b/.github/workflows/distribution.yml
@@ -9,6 +9,7 @@ on:
       - main
   schedule:
     - cron: "0 19 * * 0"
+  workflow_dispatch:
 
 jobs:
   update-weights:
@@ -28,7 +29,6 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 9
           run_install: |
             - recursive: true
               args: [--frozen-lockfile, --strict-peer-dependencies]
