--- a/.github/workflows/distribution.yml
+++ b/.github/workflows/distribution.yml
@@ -17,6 +17,7 @@ jobs:
       HOT_WALLET_ADDRESS: ${{ secrets.HOT_WALLET_ADDRESS }}
       HOT_WALLET_PRIVATE_KEY: ${{ secrets.HOT_WALLET_PRIVATE_KEY }}
       SPLITS_API_KEY: ${{ secrets.SPLITS_API_KEY }}
+      POPULATE_USER_ID: ${{ secrets.POPULATE_USER_ID }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
