--- a/apps/frontend/.eslintrc.json
+++ b/apps/frontend/.eslintrc.json
@@ -1,3 +1,30 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules": {
+    "@typescript-eslint/no-misused-promises": "error",
+    "@typescript-eslint/no-floating-promises": "error",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-expressions": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "argsIgnorePattern": "^_"
+      }
+    ],
+    "no-restricted-properties": [
+      "error",
+      {
+        "object": "console",
+        "property": "error",
+        "message": "Please use the logger instead.",
+      }
+    ],
+    "no-restricted-globals": [
+      "error",
+      {
+        "name": "prompt",
+        "message": "Please use a React modal instead."
+      }
+    ]
+  }
 }
