fix: turbo env variables

--- a/apps/frontend/.eslintrc.json
+++ b/apps/frontend/.eslintrc.json
@@ -16,7 +16,7 @@
       {
         "object": "console",
         "property": "error",
-        "message": "Please use the logger instead.",
+        "message": "Please use the logger instead."
       }
     ],
     "no-restricted-globals": [
